# MaLib1

./: CMakeLists.txt
include/: lib1.h
src/: lib1.cpp
